feat: extend sales RFQ projections
